Chirper.Envoy/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8080
static_resources:
  listeners:
  - name: listener_0_0_0_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name:  chirper_web_service_host
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: chirper_web_service_cluster
          http_filters:
          - name: envoy.router
  clusters:
  - name: chirper_web_service_cluster
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        protocol: TCP
        address: chirper-web.svc.cluster.local
        port_value: 80
